Java 11 compatibility